# Coffee-Pocket

./: .dockerignore  .env.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  README.md  firebase.json  fly.toml  pyproject.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  fly-deploy.yml
data/: tainan_list.json
data/audit/: deleted_cafes_backup.json  suspicious_matches.tsv
data/ig/: greenyaya.314.txt
designs/wireframes/: Coffee Pocket Wireframes.html  app.jsx  wf-desktop.jsx  wf-home.jsx  wf-mobile.jsx  wf-primitives.jsx
docs/: TODO.md  data-pipeline.md  import-recommendations.md  檢查 Pipeline 的腳本們.md
scratch/: check_db.py  check_raw_signals.py  test_photos_scraper.py  test_self_ping.py
services/api/: README.md  main.py  worker.py
specs/: AGENTS.md  SPEC.md  TODO.md  requirements.md  semantic_layer.yaml  tasks.md
src/coffee_pocket/: __init__.py  config.py  db.py  llm.py  storage.py
supabase/: verify.sql
supabase/migrations/: 0001_init_semantic_layer.sql  0002_cafes_google_meta.sql  0003_cafes_cover_image.sql  0004_cafes_duplicate_of.sql  0005_user_features.sql  0006_rpc_functions.sql  0007_search_time_filter.sql  0010_cafe_detail_price_review.sql  0011_or_tag_filter.sql  0012_fix_cafe_open_at.sql  0013_unlimited_radius_and_cafe_tags_policy.sql  0014_cafe_tags_delete_policy.sql  0015_dynamic_tags_and_secure_rls.sql  0016_tighten_rls.sql  0017_fix_closed_cafes_filter.sql  0020_pinyin_slug.sql  (+15 more)
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+133 files in other folders)
